--- a/WebDev/INVICTA/index_1.html
+++ b/WebDev/INVICTA/index_1.html
@@ -118,7 +118,7 @@
           }
 
           if (emailInput.value.trim() === "") {
-            emailError.textContent = "Email is required";
+            emailError.textContent = "mail is required";
             return;
           }
 
